unpackaged/main/default/objects/Third_Party_Administrator__c/Third_Party_Administrator__c.object-meta.xml
<CustomObject>
    <label>Third Party Administrator</label>
    <nameField>
        <label>Third Party Administrator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Administrators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>