unpackaged/main/default/objects/Third_Party_Administrator__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Managed Solutions (AMS)</fullName>
            </value>
            <value>
                <fullName>Outside Managed Solutions (OMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>